# Kompjuterska-Grafika-Projekt

./: .gitignore  CMakeLists.txt  Readme.md
Glitter/: imgui.ini
Glitter/Headers/: Audio.hpp  Car.h  Car.hpp  CarPhysics.hpp  FrameBuffer.hpp  Game.h  GlobalVariables.h  MainMenu.h  Model.hpp  Physics.h  Scene.hpp  Score.hpp  Skybox.cpp  Skybox.hpp  Terrain.h  camera.hpp  glitter.hpp  init.h  light.hpp  main.hpp  mesh.hpp  shader.hpp
Glitter/Shaders/: car.vert  default.frag  default.vert  road.frag  road.vert  skybox.frag  skybox.vert  terrian.frag  terrian.vert
Glitter/Sources/: Audio.cpp  Car.cpp  CarPhysics.cpp  FrameBuffer.cpp  Game.cpp  GlobalVariables.cpp  MainMenu.cpp  Physics.cpp  Scene.cpp  Skybox.cpp  Terrain.cpp  Terrain.h  camera.cpp  init.cpp  main.cpp
Glitter/Sources/assets/: highscore.txt
Glitter/Sources/assets/img/desertRace/: porche.mtl
Glitter/Sources/assets/img/pre-game/: FVRBOW5K28TUGPPV2673XRH9I.mtl  untitled.mtl
Glitter/Sources/assets/img/terrian/: roads.mtl
Glitter/Sources/assets/model/bmw/: bmw.mtl
Glitter/Sources/assets/model/car/: 050 Camaro Low Poly.fbx  050LowPolyCamaro.mtl  bmw.mtl  bmw2.mtl  car.mtl  redCar.mtl  tyre.mtl
Glitter/Sources/assets/model/car1/: porche.mtl
Glitter/Sources/assets/model/map1/: material.mtl
Glitter/Sources/assets/model/map2/: RaceTrack.mtl
VSSolutionExample/: CMakeLists.txt  VSSolutionExample.vcxproj  VSSolutionExample.vcxproj.filters  main.cpp
VSSolutionExample/Debug/: vc143.idb
VSSolutionExample/Debug/VSSoluti.45280993.tlog/: VSSolutionExample.lastbuildstate
VSSolutionExample/x64/Debug/: vc143.idb
VSSolutionExample/x64/Debug/VSSoluti.45280993.tlog/: VSSolutionExample.lastbuildstate
VSSolutionExample/x64/Release/: VSSolutionExample.exe.recipe  VSSolutionExample.iobj  VSSolutionExample.ipdb
VSSolutionExample/x64/Release/VSSoluti.45280993.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VSSolutionExample.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
